Alterações para campos UUID

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "minha_api_1",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.ts",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore node_modules src/http/server.ts",
