--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore node_modules src/http/server.ts",
     "migration:generate": "typeorm-ts-node-commonjs -d ./src/database/data-source.ts migration:generate ./src/database/migrations/default",
-    "migration:run": "typeorm-ts-node-commonjs -d ./src/database/data-source.ts migration:run"
+    "migration:run": "typeorm-ts-node-commonjs -d ./src/database/data-source.ts migration:run",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.0.0",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.13",
+    "jest": "^29.0.1",
+    "ts-jest": "^28.0.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
   },
