--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.13",
+    "@types/uuid": "^8.3.4",
     "jest": "^29.0.1",
     "ts-jest": "^28.0.8",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "uuid": "^8.3.2"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
